force-app/main/default/objects/Migrated_Quote_Line__c/Migrated_Quote_Line__c.object-meta.xml
<CustomObject>
    <label>Migrated Quote Line</label>
    <nameField>
        <label>Migrated Quote Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migrated Quote Line</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>