force-app/main/default/objects/Migrated_Quote_Line__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>