force-app/main/default/objects/Migrated_Quote_Line__c/fields/Business_Unit_Wrapper__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Wrapper__c</fullName>
    <label>Business Unit Wrapper</label>
    <length>100</length>
    <type>Text</type>
</CustomField>