force-app/main/default/objects/Migrated_Quote_Line__c/fields/Default_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Frequency__c</fullName>
    <label>Default Billing Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>