force-app/main/default/objects/Migrated_Quote_Line__c/fields/From_Asset_Migration__c.field-meta.xml
<CustomField>
    <fullName>From_Asset_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Asset Migration</label>
    <type>Checkbox</type>
</CustomField>