force-app/main/default/objects/Migrated_Quote_Line__c/fields/isWrapper__c.field-meta.xml
<CustomField>
    <fullName>isWrapper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isWrapper</label>
    <type>Checkbox</type>
</CustomField>