force-app/main/default/objects/Migrated_Quote_Line__c/fields/Migrate_Contracted_Asset__c.field-meta.xml
<CustomField>
    <fullName>Migrate_Contracted_Asset__c</fullName>
    <label>Migrate Contracted Asset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>