force-app/main/default/objects/Migrated_Quote_Line__c/fields/Migrated_ARR__c.field-meta.xml
<CustomField>
    <fullName>Migrated_ARR__c</fullName>
    <label>Migrated ARR</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>