force-app/main/default/objects/Migrated_Quote_Line__c/fields/SBQQ_ListPrice__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_ListPrice__c</fullName>
    <label>SBQQ__ListPrice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>