force-app/main/default/objects/Migrated_Quote_Line__c/fields/SBQQ_OptionLevel__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_OptionLevel__c</fullName>
    <label>SBQQ__OptionLevel</label>
    <length>200</length>
    <type>Text</type>
</CustomField>