force-app/main/default/objects/Migrated_Quote_Line__c/fields/SBQQ_OptionType__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_OptionType__c</fullName>
    <label>SBQQ__OptionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>