force-app/main/default/objects/Migrated_Quote_Line__c/fields/SBQQ_OriginalPrice__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_OriginalPrice__c</fullName>
    <label>SBQQ__OriginalPrice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>