force-app/main/default/objects/Migrated_Quote_Line__c/fields/SBQQ_Product__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Product__c</fullName>
    <label>SBQQ__Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>