force-app/main/default/objects/Migrated_Quote_Line__c/fields/SBQQ_ProductOption__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_ProductOption__c</fullName>
    <label>SBQQ__ProductOption</label>
    <length>100</length>
    <type>Text</type>
</CustomField>