force-app/main/default/objects/Migrated_Quote_Line__c/fields/SBQQ_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Quantity__c</fullName>
    <label>SBQQ__Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>