force-app/main/default/objects/Migrated_Quote_Line__c/fields/SBQQ_SpecialPriceType__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_SpecialPriceType__c</fullName>
    <label>SBQQ__SpecialPriceType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>