force-app/main/default/objects/Migrated_Quote_Line__c/fields/SBQQ_SubscriptionPricing__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_SubscriptionPricing__c</fullName>
    <label>SBQQ__SubscriptionPricing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>