force-app/main/default/objects/Migrated_Quote_Line__c/fields/Test_Quote_Line_Wrapper__c.field-meta.xml
<CustomField>
    <fullName>Test_Quote_Line_Wrapper__c</fullName>
    <label>Test Quote Line Wrapper</label>
    <length>100</length>
    <type>Text</type>
</CustomField>