force-app/main/default/objects/Migrated_Quote_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SBQQ_Quote__c</columns>
    <columns>SBQQ_ListPrice__c</columns>
    <columns>SBQQ_OriginalPrice__c</columns>
    <columns>SBQQ_SubscriptionPricing__c</columns>
    <columns>isWrapper__c</columns>
    <columns>Batch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Batch__c</field>
        <operation>equals</operation>
        <value>4</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>